<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/primaryColor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Settings"
        app:titleTextColor="@color/white"/>
    <LinearLayout
        android:id="@+id/contentArea"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainSettings"
                    android:textAlignment="center"
                    android:layout_marginEnd="10dp"/>
                <View
                    android:background="@color/grayColor"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:textStyle="bold"
                android:id="@+id/notificationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ScreenshotFromNotification"
                app:thumbTint="@drawable/switch_track_selector"
                app:trackTint="@drawable/switch_thumb_selector"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/enableNotification"/>
            <View
                android:background="@color/grayColor"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:textStyle="bold"
                android:id="@+id/btnSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ScreenshotFromButton"
                app:thumbTint="@drawable/switch_track_selector"
                app:trackTint="@drawable/switch_thumb_selector"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/enableButton"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moreSettings"
                    android:layout_marginEnd="10dp"/>
                <View
                    android:background="@color/grayColor"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"/>
            </LinearLayout>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:textStyle="bold"
                android:id="@+id/soundSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enableAudio"
                app:thumbTint="@drawable/switch_track_selector"
                app:trackTint="@drawable/switch_thumb_selector"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/enableSound"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="50dp" />
</LinearLayout>
