<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:background="@color/grayColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <com.google.android.material.button.MaterialButton
                android:theme="@style/Theme.MaterialComponents"
                android:textSize="14sp"
                android:textColor="@color/darkColor"
                android:id="@+id/launch"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/launch"
                android:textAllCaps="false"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:icon="@drawable/baseline_camera_24"
                app:iconPadding="10dp"
                app:iconSize="19dp"
                app:iconTint="@color/darkColor"
                app:strokeColor="@color/black"/>
            <com.google.android.material.button.MaterialButton
                android:theme="@style/Theme.MaterialComponents"
                android:textSize="14sp"
                android:textColor="@color/darkColor"
                android:id="@+id/browse"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/browse"
                android:textAllCaps="false"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:icon="@drawable/baseline_photo_library_24"
                app:iconPadding="10dp"
                app:iconSize="19dp"
                app:iconTint="@color/darkColor"
                app:strokeColor="@color/black"/>
            <com.google.android.material.button.MaterialButton
                android:theme="@style/Theme.MaterialComponents"
                android:textSize="14sp"
                android:textColor="@color/darkColor"
                android:id="@+id/settings"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/settings"
                android:textAllCaps="false"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:icon="@drawable/baseline_settings_24"
                app:iconPadding="10dp"
                app:iconSize="19dp"
                app:iconTint="@color/darkColor"
                app:strokeColor="@color/black"/>
            <com.google.android.material.button.MaterialButton
                android:theme="@style/Theme.MaterialComponents"
                android:textSize="14sp"
                android:textColor="@color/darkColor"
                android:id="@+id/exit"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/exit"
                android:onClick="exit"
                android:textAllCaps="false"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:icon="@drawable/baseline_logout_24"
                app:iconPadding="10dp"
                app:iconSize="19dp"
                app:iconTint="@color/darkColor"
                app:strokeColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
